chore: :memo: Add SEO infos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Archethic Migration</title>
-  </head>
-  <body class="bg-phone bg-cover bg-center md:bg-desktop bg-no-repeat min-h-screen">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Archethic - Ennea Studio">
+  <title>Archethic migration UCO token ERC20</title>
+  <meta name="description"
+    content="Migrate your UCO ERC20 token to Archethic's new ERC20 token. Follow our step-by-step guide for a quick and secure transition." />
+  <script defer data-domain='migration-uco.archethic.net' src='https://plausible.io/js/plausible.js'></script>
+</head>
+
+<body class="bg-phone bg-cover bg-center md:bg-desktop bg-no-repeat min-h-screen">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
