Test access aeHosting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="bg-phone bg-cover bg-center md:bg-desktop bg-no-repeat min-h-screen">
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="src/main.tsx"></script>
 </body>
 
 </html>
